<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="text" />

        <EditText
            android:id="@+id/etCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/code"
            android:inputType="text" />

        <EditText
            android:id="@+id/etUnit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/unit"
            android:inputType="text" />

        <EditText
            android:id="@+id/etPurchasePrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/purchase_price"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/etSalePrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/sale_price"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/etQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/quantity"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/etMinQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/min_quantity"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/etBarcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/barcode"
            android:inputType="text" />

        <EditText
            android:id="@+id/etNotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/notes"
            android:inputType="textMultiLine"
            android:minLines="2" />

    </LinearLayout>
</ScrollView>
