<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/currency_name"
            android:inputType="text" />

        <EditText
            android:id="@+id/etSymbol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/currency_symbol"
            android:inputType="text" />

        <EditText
            android:id="@+id/etRate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/currency_rate"
            android:inputType="numberDecimal" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchDefault"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/default_currency" />

    </LinearLayout>
</ScrollView>
